--- a/AspAndWebpack/Views/Shared/_Layout_Template.cshtml
+++ b/AspAndWebpack/Views/Shared/_Layout_Template.cshtml
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-<link href="../../dist/styles.css" rel="stylesheet"></head>
+</head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -33,5 +33,5 @@
     </footer>
 </div>
 
-<script type="text/javascript" src="../../dist/1.bundle.js"></script><script type="text/javascript" src="../../dist/bundle.js"></script></body>
+</body>
 </html>
